add linked sharing link

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            HUMAN ENSEMBLING
 locale:           en_US
-url:              
+url:              "http://blog.chuyu.ml" 
 
 # Octopress
 # Default extension for new posts and pages
