--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            HUMAN ENSEMBLING
 locale:           en_US
-url:              "http://blog.chuyu.ml" 
+url:              "http://127.0.0.1" 
 
 # Octopress
 # Default extension for new posts and pages
