--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..6
   use_coderay: false
-
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  input: GFM
 
 # Site owner
 owner:
