--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@
 title:            HUMAN ENSEMBLING
 locale:           en_US
 url:              "http://127.0.0.1:4000" 
+reading_time:     true
+words_per_minute: 200
 
 # Octopress
 # Default extension for new posts and pages
@@ -28,6 +30,9 @@ kramdown:
   use_coderay: false
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   input: GFM
+
+paginate: 5
+#paginate_path: "/pages/:num/"
 
 # Site owner
 owner:
